--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 port: 4000
 analytics_token: 'UA-2118378-32'
 
-markdown: rdiscount
-rdiscount:
-  extensions: [smart]
-
+markdown: kramdown
 highlighter: rouge
 permalink: /:categories/:title/
 
