Add disadis post

--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,6 @@ authors:
     name:           Jeremy Friesen
     twitter:        jeremyfriesen
     url:            http://takeonrules.com/
+  - id:             dbrower
+    name:           Don Brower
+    url:            https://github.com/dbrower/
